--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (10.3~svn296373-1) UNRELEASED; urgency=medium
+freebsd-libs (10.3~svn296373-1) experimental; urgency=medium
 
   * New upstream snapshot of 10.3-RC1
   * Make get-orig-source tarball reproducible
