--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+freebsd-libs (10.3~svn296373-2) UNRELEASED; urgency=medium
+
+  * Don't include sys/ctype.h kernel header;  fixes FTBFS on non-
+    kfreebsd arches.
+      - sys_ctype.diff
+
+ -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 05 Mar 2016 20:17:57 +0000
+
 freebsd-libs (10.3~svn296373-1) experimental; urgency=medium
 
   * New upstream snapshot of 10.3-RC1
