--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 freebsd-libs (10.3~svn296373-2) UNRELEASED; urgency=medium
 
-  * Don't include sys/ctype.h kernel header;  fixes FTBFS on non-
-    kfreebsd arches.
-      - sys_ctype.diff
+  * Avoid including kernel headers on non-kfreebsd arches,
+    sys/ctype.h and machine/stdarg.h in sys/kern/subr_prf.c
+      - subr_prf.diff
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 05 Mar 2016 20:17:57 +0000
 
