--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (10.3~svn296373-2) UNRELEASED; urgency=medium
+freebsd-libs (10.3~svn296373-2) experimental; urgency=medium
 
   * Avoid including kernel headers on non-kfreebsd arches,
     sys/ctype.h and machine/stdarg.h in sys/kern/subr_prf.c
