--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (10.3~svn296373-4) UNRELEASED; urgency=medium
+
+  * Use new preferred hostname for upstream SVN with HTTPS
+    (svn.freebsd.org).
+
+ -- Steven Chamberlain <steven@pyro.eu.org>  Mon, 04 Apr 2016 12:35:30 +0100
+
 freebsd-libs (10.3~svn296373-3) experimental; urgency=medium
 
   * Add missing patch hunk
