--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ freebsd-libs (10.3~svn296373-4) UNRELEASED; urgency=medium
 
   * Use new preferred hostname for upstream SVN with HTTPS
     (svn.freebsd.org).
+  * Enable kinfo_getvmobject.c in libutil-freebsd 
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Mon, 04 Apr 2016 12:35:30 +0100
 
