--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ freebsd-libs (10.3~svn296373-4) UNRELEASED; urgency=medium
     (svn.freebsd.org).
   * Enable kinfo_getvmobject.c in libutil-freebsd 
   * Multi-archify libusb{2,3-dev}
+  * Declare a versioned Provides: libusb-1.0-0-dev (= 0.1.12)
+    in libusb2-dev
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Mon, 04 Apr 2016 12:35:30 +0100
 
