Upload 10.3~svn296373-4 to experimental
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@6031 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (10.3~svn296373-4) UNRELEASED; urgency=medium
+freebsd-libs (10.3~svn296373-4) experimental; urgency=medium
 
   * Use new preferred hostname for upstream SVN with HTTPS
     (svn.freebsd.org).
