Upload 10.3~svn296373-5 to experimental
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@6037 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (10.3~svn296373-5) UNRELEASED; urgency=medium
+freebsd-libs (10.3~svn296373-5) experimental; urgency=medium
 
   * Build kinfo_getvmobject.c only on kfreebsd host architecture
   * Also build kinfo_getvmmap.c (Closes: #823385) and the rest of
