--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (10.3~svn296373-6) UNRELEASED; urgency=medium
+
+  * Fix FTBFS on linux: installing sbuf.h is not kfreebsd-specific
+
+ -- Steven Chamberlain <steven@pyro.eu.org>  Fri, 06 May 2016 12:23:46 +0100
+
 freebsd-libs (10.3~svn296373-5) experimental; urgency=medium
 
   * Build kinfo_getvmobject.c only on kfreebsd host architecture
