--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ freebsd-libs (10.3~svn296373-6) UNRELEASED; urgency=medium
 
   * Fix FTBFS on !kfreebsd: installing sbuf.h in libsbuf-dev is not
     kfreebsd-specific
+  * Now using debhelper compat v9
   * Now using Standards-Version 3.9.8 (no changes needed).
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Fri, 06 May 2016 12:23:46 +0100
