--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ freebsd-libs (10.3~svn296373-6) UNRELEASED; urgency=medium
     kfreebsd-specific
   * Now using debhelper compat v9
   * Now using Standards-Version 3.9.8 (no changes needed).
+  * Add Build-Depends: dpkg-dev (>= 1.16.1.1) and use buildflags.mk
+    to set CFLAGS, respecting DEB_BUILD_OPTIONS flags such as noopt
+  * Enable hardening=+all, which includes PIE, relro and stack protector
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Fri, 06 May 2016 12:23:46 +0100
 
