Upload 10.3~svn296373-6 to experimental
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@6046 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-freebsd-libs (10.3~svn296373-6) UNRELEASED; urgency=medium
+freebsd-libs (10.3~svn296373-6) experimental; urgency=medium
 
   * Fix FTBFS on !kfreebsd: installing sbuf.h in libsbuf-dev is not
     kfreebsd-specific
