--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (10.3~svn296373-7) UNRELEASED; urgency=medium
+
+  * Mark kinfo_* symbols as kfreebsd-specific
+
+ -- Steven Chamberlain <steven@pyro.eu.org>  Fri, 06 May 2016 16:51:19 +0100
+
 freebsd-libs (10.3~svn296373-6) experimental; urgency=medium
 
   * Fix FTBFS on !kfreebsd: installing sbuf.h in libsbuf-dev is not
