--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-freebsd-libs (10.3~svn296373-7) UNRELEASED; urgency=medium
+freebsd-libs (10.3~svn296373-8) unstable; urgency=medium
+
+  * Upload to unstable
+
+ -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 07 May 2016 17:39:48 +0100
+
+freebsd-libs (10.3~svn296373-7) experimental; urgency=medium
 
   * Mark kinfo_* symbols as kfreebsd-specific
 
