libusb2-dev: fix libusb-1.0-0-dev versioned provided, set the version to 1.0.6.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@6076 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+freebsd-libs (10.3~svn296373-9) UNRELEASED; urgency=medium
+
+  * libusb2-dev: fix libusb-1.0-0-dev versioned provided, set the version to
+    1.0.6.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 Jul 2016 23:20:36 +0200
+
 freebsd-libs (10.3~svn296373-8) unstable; urgency=medium
 
   * Upload to unstable
