Fix libkiconv4 Description; it is not a udeb.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@6146 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freebsd-libs (10.3~svn296373-11) UNRELEASED; urgency=medium
+
+  * Fix libkiconv4 Description; it is not a udeb.
+
+ -- Steven Chamberlain <stevenc@debian.org>  Sun, 05 Mar 2017 13:13:48 +0000
+
 freebsd-libs (10.3~svn296373-10) unstable; urgency=medium
 
   * Pre-define MACHINE_ARCH with the host architecture we are building
